--- a/src/Services/Catalog/Catalog.API/Catalog.API.csproj
+++ b/src/Services/Catalog/Catalog.API/Catalog.API.csproj
@@ -13,6 +13,8 @@
     
     <PackageReference Include="Carter" Version="8.0.0" />
     
+    <PackageReference Include="Marten" Version="7.37.0" />
+    
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
   </ItemGroup>
 
